load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files(["bitmap_alloc.cpp", "bitmap_alloc.hpp", "buddy.cpp", "buddy.hpp", "new_delete.cpp", "pmm.cpp", "pmm.hpp", "slab.cpp", "slab.hpp", "vmo.cpp", "vmo.hpp", "vmm.cpp", "vmm.hpp"], visibility = ["//test:__subpackages__"])

cc_library(
    name = "mm",
    srcs = [
        "bitmap_alloc.cpp",
        "buddy.cpp",
        "new_delete.cpp",
        "pmm.cpp",
        "slab.cpp",
    ],
    hdrs = [
        "bitmap_alloc.hpp",
        "buddy.hpp",
        "pmm.hpp",
        "slab.hpp",
    ],
    deps = [
        "//kernel/arch/x86_64:paging_hdrs",
        "//kernel/lib:klib",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vmo",
    srcs = ["vmo.cpp"],
    hdrs = ["vmo.hpp"],
    deps = [
        ":mm",
        "//kernel/arch/x86_64:paging_hdrs",
        "//kernel/core/object:object_hdrs",
        "//kernel/lib:klib",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vmm",
    srcs = ["vmm.cpp"],
    hdrs = ["vmm.hpp"],
    deps = [
        ":mm",
        ":vmo",
        "//kernel/arch/x86_64:paging_hdrs",
        "//kernel/lib:klib",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vmo_hdrs",
    hdrs = ["vmo.hpp"],
    deps = [
        "//kernel/arch/x86_64:paging_hdrs",
        "//kernel/core/object:object_hdrs",
        "//kernel/lib:klib",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "slab_hdrs",
    hdrs = ["//kernel/core/mm:slab.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bitmap_alloc_hdrs",
    hdrs = ["//kernel/core/mm:bitmap_alloc.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vmm_hdrs",
    hdrs = ["vmm.hpp"],
    deps = [":vmo_hdrs"],
    visibility = ["//visibility:public"],
)
