load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "object",
    srcs = ["object.cpp", "handle_table.cpp", "channel.cpp", "port.cpp"],
    hdrs = ["object.hpp", "rights.hpp", "handle_table.hpp", "channel.hpp", "port.hpp"],
    deps = ["//kernel/core/mm:mm", "//kernel/lib:klib"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "object_hdrs",
    hdrs = ["object.hpp", "rights.hpp", "handle_table.hpp", "channel.hpp", "port.hpp"],
    visibility = ["//visibility:public"],
)
