load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files(["object.cpp", "handle_table.cpp", "channel.cpp", "port.cpp", "process.cpp"], visibility = ["//test:__subpackages__"])

cc_library(
    name = "object",
    srcs = ["object.cpp", "handle_table.cpp", "channel.cpp", "port.cpp", "process.cpp"],
    hdrs = ["object.hpp", "rights.hpp", "handle_table.hpp", "channel.hpp", "port.hpp", "process.hpp"],
    deps = [
        "//kernel/core/mm:mm",
        "//kernel/core/mm:vmm",
        "//kernel/core/sched:sched_hdrs",
        "//kernel/lib:klib",
        "//kernel/lib:utils",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "object_hdrs",
    hdrs = ["object.hpp", "rights.hpp", "handle_table.hpp", "channel.hpp", "port.hpp", "process.hpp"],
    deps = ["//kernel/lib:utils"],
    visibility = ["//visibility:public"],
)
