load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "devfs_elf",
    srcs = ["devfs.cpp"],
    additional_linker_inputs = ["devfs.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location devfs.ld)"],
    visibility = ["//visibility:private"],
)

genrule(
    name = "devfs_embed",
    srcs = [":devfs_elf"],
    outs = ["devfs_embed.o"],
    cmd = "cp $(SRCS) $(@D)/devfs.bin && " +
          "cd $(@D) && " +
          "/usr/local/opt/llvm/bin/llvm-objcopy " +
          "-I binary -O elf64-x86-64 -B i386:x86-64 " +
          "devfs.bin $$PWD/devfs_embed.o",
    visibility = ["//visibility:public"],
)
