load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//toolchain:embed_binary.bzl", "embed_binary")

cc_binary(
    name = "devfs_elf",
    srcs = ["devfs.cpp"],
    additional_linker_inputs = ["devfs.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location devfs.ld)"],
    visibility = ["//visibility:private"],
)

embed_binary(
    name = "devfs_embed",
    src = ":devfs_elf",
    basename = "devfs",
    visibility = ["//visibility:public"],
)
