load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "fat32_elf",
    srcs = ["fat32.cpp"],
    additional_linker_inputs = ["fat32.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location fat32.ld)"],
    visibility = ["//visibility:private"],
)

genrule(
    name = "fat32_embed",
    srcs = [":fat32_elf"],
    outs = ["fat32_embed.o"],
    cmd = "cp $(SRCS) $(@D)/fat32.bin && " +
          "cd $(@D) && " +
          "/usr/local/opt/llvm/bin/llvm-objcopy " +
          "-I binary -O elf64-x86-64 -B i386:x86-64 " +
          "fat32.bin $$PWD/fat32_embed.o",
    visibility = ["//visibility:public"],
)
