load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//toolchain:embed_binary.bzl", "embed_binary")

cc_binary(
    name = "fat32_elf",
    srcs = ["fat32.cpp"],
    additional_linker_inputs = ["fat32.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location fat32.ld)"],
    deps = ["//kernel/lib:utils"],
    visibility = ["//visibility:private"],
)

embed_binary(
    name = "fat32_embed",
    src = ":fat32_elf",
    basename = "fat32",
    visibility = ["//visibility:public"],
)
