load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "tmpfs_elf",
    srcs = ["tmpfs.cpp"],
    additional_linker_inputs = ["tmpfs.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location tmpfs.ld)"],
    visibility = ["//visibility:private"],
)

genrule(
    name = "tmpfs_embed",
    srcs = [":tmpfs_elf"],
    outs = ["tmpfs_embed.o"],
    cmd = "cp $(SRCS) $(@D)/tmpfs.bin && " +
          "cd $(@D) && " +
          "/usr/local/opt/llvm/bin/llvm-objcopy " +
          "-I binary -O elf64-x86-64 -B i386:x86-64 " +
          "tmpfs.bin $$PWD/tmpfs_embed.o",
    visibility = ["//visibility:public"],
)
