load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//toolchain:embed_binary.bzl", "embed_binary")

cc_binary(
    name = "tmpfs_elf",
    srcs = ["tmpfs.cpp"],
    additional_linker_inputs = ["tmpfs.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location tmpfs.ld)"],
    deps = ["//kernel/lib:kstd"],
    visibility = ["//visibility:private"],
)

embed_binary(
    name = "tmpfs_embed",
    src = ":tmpfs_elf",
    basename = "tmpfs",
    visibility = ["//visibility:public"],
)
