load("@rules_cc//cc:defs.bzl", "cc_binary")

genrule(
    name = "shell_elf",
    srcs = [
        "shell.cpp",
        "shell.ld",
    ],
    outs = ["shell.elf"],
    cmd = "/usr/bin/clang++ " +
          "-target x86_64-unknown-elf " +
          "-ffreestanding -nostdlib " +
          "-std=c++26 " +
          "-fno-exceptions -fno-rtti " +
          "-Wall -Wextra -Werror " +
          "-O2 " +
          "-mno-sse -mno-sse2 -mgeneral-regs-only " +
          "-mcmodel=small " +
          "-T $(location shell.ld) " +
          "-o $@ " +
          "$(location shell.cpp) " +
          "-Wl,-z,max-page-size=0x1000 " +
          "-static " +
          "--ld-path=/usr/local/bin/lld-wrapper.sh",
    visibility = ["//visibility:private"],
)

genrule(
    name = "shell_embed",
    srcs = [":shell.elf"],
    outs = ["shell_embed.o"],
    cmd = "cp $(SRCS) $(@D)/shell.bin && " +
          "cd $(@D) && " +
          "/usr/local/opt/llvm/bin/llvm-objcopy " +
          "-I binary -O elf64-x86-64 -B i386:x86-64 " +
          "shell.bin $$PWD/shell_embed.o",
    visibility = ["//visibility:public"],
)
