load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "shell_elf",
    srcs = ["shell.cpp"],
    additional_linker_inputs = ["shell.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location shell.ld)"],
    visibility = ["//visibility:private"],
)

genrule(
    name = "shell_embed",
    srcs = [":shell_elf"],
    outs = ["shell_embed.o"],
    cmd = "cp $(SRCS) $(@D)/shell.bin && " +
          "cd $(@D) && " +
          "/usr/local/opt/llvm/bin/llvm-objcopy " +
          "-I binary -O elf64-x86-64 -B i386:x86-64 " +
          "shell.bin $$PWD/shell_embed.o",
    visibility = ["//visibility:public"],
)
