load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//toolchain:embed_binary.bzl", "embed_binary")

cc_binary(
    name = "shell_elf",
    srcs = ["shell.cpp"],
    additional_linker_inputs = ["shell.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location shell.ld)"],
    deps = ["//kernel/lib:utils"],
    visibility = ["//visibility:private"],
)

embed_binary(
    name = "shell_embed",
    src = ":shell_elf",
    basename = "shell",
    visibility = ["//visibility:public"],
)
